@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-06T01:41:00Z",
+  "timestamp" : "2025-07-07T01:39:02Z",
   "count_outdated" : 1872,
   "uniques_outdated" : 1111,
-  "count" : 1889,
-  "uniques" : 1128,
+  "count" : 1891,
+  "uniques" : 1130,
   "clones" : [
     {
       "timestamp": "2025-06-24T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-06T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
