@@ -1,6 +1,6 @@
 {
-  "count": 17,
-  "uniques": 11,
+  "count": 19,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2025-06-24T00:00:00Z",
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-06T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
